--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,9 @@
     "activeTab",
     "storage"
   ],
+  "host_permissions": [
+    "<all_urls>"
+  ],
   
   "background": {
     "service_worker": "service_worker.js"
